Replace American English with UK English

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         /* Custom styles for the app */
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f0f4f8; /* Light gray background, keeps good contrast */
+            background-color: #f0f4f8; /* Light grey background, keeps good contrast */
             margin: 0;
             padding-top: 64px; /* Space for fixed navbar */
             box-sizing: border-box;
             line-height: 1.6;
-            color: #2d3748; /* Dark gray for general text */
+            color: #2d3748; /* Dark grey for general text */
         }
         .navbar {
             background-color: #0f79b7; /* Primary Blue for navbar */
@@ -79,12 +79,12 @@
         .content-block h3 {
             font-size: 1.5rem;
             font-weight: 700;
-            color: #4a5568; /* Dark gray for subheadings */
+            color: #4a5568; /* Dark grey for subheadings */
             margin-bottom: 12px;
         }
         .content-block p, .content-block ul {
             font-size: 1.1rem;
-            color: #4a5568; /* Dark gray for text */
+            color: #4a5568; /* Dark grey for text */
         }
         .content-block ul {
             list-style-type: disc;
@@ -113,7 +113,7 @@
             background-color: #0b6094; /* Darker blue on hover */
             transform: translateY(-2px);
         }
-        /* Specific text color adjustments based on new palette */
+        /* Specific text colour adjustments based on new palette */
         .text-blue-700-custom {
             color: #0f79b7; /* Primary blue for main invitation text */
         }
@@ -142,13 +142,13 @@
         @media (max-width: 768px) {
             .navbar-container {
                 flex-direction: column;
-                text-align: center;
+                text-align: centre;
             }
             .nav-links {
                 margin-top: 1rem;
                 display: flex;
                 flex-wrap: wrap;
-                justify-content: center;
+                justify-content: centre;
             }
             .nav-links a {
                 margin: 0.5rem;
@@ -182,12 +182,12 @@
     <div id="invitation" class="section-container">
         <h1 class="section-title">Invitation</h1>
         <div class="content-block">
-            <p class="text-xl font-semibold mb-4 text-center text-blue-700-custom">Gauteng Modern Pentathlon invites you to the:</p>
-            <h2 class="text-4xl font-extrabold text-center text-gray-900 mb-6">Biathle & Triathle Championships 2025</h2>
-            <p class="text-2xl text-center text-gray-700 mb-2"><strong>Date:</strong> 30 August 2025</p>
-            <p class="text-2xl text-center text-gray-700 mb-4"><strong>Venue:</strong> To be confirmed</p>
-            <p class="text-center text-lg text-gray-600">Directions will be provided once the venue is confirmed.</p>
-            <p class="text-lg text-center text-gray-600 mt-4">Join us for an exciting day of swimming, running, and shooting (for Triathle)!</p>
+            <p class="text-xl font-semibold mb-4 text-centre text-blue-700-custom">Gauteng Modern Pentathlon invites you to the:</p>
+            <h2 class="text-4xl font-extrabold text-centre text-gray-900 mb-6">Biathle & Triathle Championships 2025</h2>
+            <p class="text-2xl text-centre text-gray-700 mb-2"><strong>Date:</strong> 30 August 2025</p>
+            <p class="text-2xl text-centre text-gray-700 mb-4"><strong>Venue:</strong> To be confirmed</p>
+            <p class="text-centre text-lg text-gray-600">Directions will be provided once the venue is confirmed.</p>
+            <p class="text-lg text-centre text-gray-600 mt-4">Join us for an exciting day of swimming, running, and shooting (for Triathle)!</p>
         </div>
     </div>
 
@@ -197,7 +197,7 @@
         <div class="content-block">
             <h3>How to Register:</h3>
             <p class="mb-4">Registrations for the Gauteng Modern Pentathlon Biathle & Triathle Championships are now open. Please complete the form by <strong>[Registration Deadline - TBD]</strong>.</p>
-            <div class="text-center">
+            <div class="text-centre">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdGedalrZz--O2AGRGjyuXx_YX9hbrF21KckD4kid10UzbqyQ/viewform?usp=dialog" target="_blank" class="registration-link-button">Register Here!</a>
             </div>
             <p class="mt-4 mb-2"><strong>Registration Fee:</strong> R150 per event (R300 for both).</p>
@@ -250,7 +250,7 @@
         <div class="content-block">
             <h3>Important Race Rules & Distances:</h3>
             <p class="mb-2">For detailed distances per age category for Biathle and Triathle, please refer to the official UIPM Competition Rules document:</p>
-            <p class="text-center mt-4">
+            <p class="text-centre mt-4">
                 <a href="https://www.fppm.pt/pentatlomoderno/bt_competition_rules_2025_final.pdf" target="_blank" class="link-blue-custom hover:underline text-lg font-semibold">
                    View Official UIPM Biathle/Triathle Rules (PDF)
                 </a>
@@ -265,7 +265,7 @@
             <p class="mb-4">This is a provisional schedule and is subject to change based on participant numbers and final arrangements. Please check back closer to the event date for the definitive schedule.</p>
             <ul class="list-disc list-inside space-y-2">
                 <li><strong>12:00:</strong> Registration & Check-in</li>
-                <li><strong>12:30:</strong> Warm-up & Course Familiarization</li>
+                <li><strong>12:30:</strong> Warm-up & Course Familiarisation</li>
                 <li><strong>12:45 - 13:00:</strong> Opening Ceremony</li>
                 <li><strong>13:00 - Approx. 2 hours:</strong> Biathle Competition Heats (Swim, Run - Age categories will run as per Heat Sheets)</li>
                 <li><strong>Immediately following Biathle (Approx. 1 hour 30 minutes):</strong> Triathle Competition Heats (Swim, Run, Shoot - Age categories will run as per Heat Sheets)</li>
