--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdGedalrZz--O2AGRGjyuXx_YX9hbrF21KckD4kid10UzbqyQ/viewform?usp=dialog" target="_blank" class="registration-link-button">Register Here!</a>
             </div>
             <p class="mt-4 mb-2"><strong>Registration Fee:</strong> R150 per event (R300 for both).</p>
-            <p class="mb-4">
+            <p class="mb-4 text-centre">
                 <strong>Payee: Gauteng Modern Pentathlon</strong><br>
                 <strong>Bank Details:</strong><br>
                 Account Type: Check Account<br>
@@ -269,7 +269,7 @@
                 <li><strong>12:45 - 13:00:</strong> Opening Ceremony</li>
                 <li><strong>13:00 - Approx. 2 hours:</strong> Biathle Competition Heats (Swim, Run - Age categories will run as per Heat Sheets)</li>
                 <li><strong>Immediately following Biathle (Approx. 1 hour 30 minutes):</strong> Triathle Competition Heats (Swim, Run, Shoot - Age categories will run as per Heat Sheets)</li>
-                <li><strong>Immediately after Triathle final heat:</strong> Medal Ceremony & Closing</li>
+                <li><strong>15 Minutes after final heat:</strong> Medal Ceremony & Closing</li>
             </ul>
             <p class="mt-4">Specific heat times for each category will be communicated after registration closes.</p>
         </div>
@@ -294,8 +294,8 @@
         <div class="content-block">
             <h3>Contact Information:</h3>
             <p>For any queries regarding the event, please contact:</p>
-            <p><strong>Gauteng Modern Pentathlon Organising Committee</strong></p>
-            <p>Email: <a href="mailto:gautengchairman@sapentathlon.org.za" class="link-blue-custom hover:underline">gautengchairman@sapentathlon.org.za</a></p>
+            <p class="text-centre"><strong>Gauteng Modern Pentathlon Organising Committee</strong></p>
+            <p class="text-centre">Email: <a href="mailto:gautengchairman@sapentathlon.org.za" class="link-blue-custom hover:underline">gautengchairman@sapentathlon.org.za</a></p>
         </div>
     </div>
 
@@ -307,3 +307,12 @@
     </script>
 </body>
 </html>
+```
+
+---
+
+### Changes Made:
+
+* **Medal Ceremony Timing:** In the "Provisional Schedule" section, the line for "Medal Ceremony & Closing" has been changed to `<strong>15 Minutes after final heat:</strong> Medal Ceremony & Closing`.
+
+You can now update your `biathle-triathle-championships.html` file with this latest versi
