Bank Details and Registration Date

--- a/index.html
+++ b/index.html
@@ -196,13 +196,14 @@
         <h1 class="section-title">Registration</h1>
         <div class="content-block">
             <h3>How to Register:</h3>
-            <p class="mb-4">Registrations for the Gauteng Modern Pentathlon Biathle & Triathle Championships are now open. Please complete the form by <strong>[Registration Deadline - TBD]</strong>.</p>
+            <p class="mb-4">Registrations for the Gauteng Modern Pentathlon Biathle & Triathle Championships are now open. Please complete the form by <strong>28 August 2025</strong>.</p>
             <div class="text-centre">
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSdGedalrZz--O2AGRGjyuXx_YX9hbrF21KckD4kid10UzbqyQ/viewform?usp=dialog" target="_blank" class="registration-link-button">Register Here!</a>
             </div>
             <p class="mt-4 mb-2"><strong>Registration Fee:</strong> R150 per event (R300 for both).</p>
             <p class="mb-4 text-centre">
                 <strong>Payee: Gauteng Modern Pentathlon</strong><br>
+                <strong>Bank: Bank Zero</strong><br>
                 <strong>Bank Details:</strong><br>
                 Account Type: Check Account<br>
                 Account Number: 80204943553<br>
@@ -230,7 +231,7 @@
             <ul class="list-disc list-inside space-y-2">
                 <li>Have completed at least 2 Biathle or Triathle events prior to this championship.</li>
                 <li>Be fully affiliated to SAMPA and the Province.</li>
-                <li>Register before the deadline of <strong>[Registration Deadline - TBD]</strong>.</li>
+                <li>Register before the deadline of <strong>28 August 2025</strong>.</li>
                 <li>Pay the full registration fee.</li>
             </ul>
             <p class="mt-4">Meeting these criteria is essential for participation in the championships.</p>
@@ -269,7 +270,7 @@
                 <li><strong>12:45 - 13:00:</strong> Opening Ceremony</li>
                 <li><strong>13:00 - Approx. 2 hours:</strong> Biathle Competition Heats (Swim, Run - Age categories will run as per Heat Sheets)</li>
                 <li><strong>Immediately following Biathle (Approx. 1 hour 30 minutes):</strong> Triathle Competition Heats (Swim, Run, Shoot - Age categories will run as per Heat Sheets)</li>
-                <li><strong>15 Minutes after final heat:</strong> Medal Ceremony & Closing</li>
+                <li><strong>Immediately after Triathle final heat:</strong> Medal Ceremony & Closing</li>
             </ul>
             <p class="mt-4">Specific heat times for each category will be communicated after registration closes.</p>
         </div>
@@ -307,5 +308,3 @@
     </script>
 </body>
 </html>
-
-
