--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <strong>Payee: Gauteng Modern Pentathlon</strong><br>
                 <strong>Bank: Bank Zero</strong><br>
                 <strong>Bank Details:</strong><br>
-                Account Type: Check Account<br>
+                Account Type: Cheque Account<br>
                 Account Number: 80204943553<br>
                 Branch Code: 888000
             </p>
