--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         <div class="content-block">
             <h3>Important Race Rules & Distances:</h3>
             <ul class="list-disc list-inside space-y-2">
-                <li>The "lap rule" **may be enforced** during the running and swimming portions of the event. Any competitor who is lapped by the leading participant in their heat may be eliminated from the race. This is for safety and to maintain race flow.</li>
+                <li>The "lap rule" may be enforced during the running and swimming portions of the event. Any competitor who is lapped by the leading participant in their heat may be eliminated from the race. This is for safety and to maintain race flow.</li>
                 <li>For detailed distances per age category for Biathle and Triathle, please refer to the official UIPM Competition Rules document:</li>
             </ul>
             <p class="text-centre mt-4">
